--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,30 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#cccc;
+}
+ h2,h3{
+	 text-align:center;
+ }
+li{
+	width:95%;
+	background-color:white;
+	list-style-type:none;
+	padding:2px 1px 2px 4px;
+	text-decoration:none;
+}
+a{
+	text-decoration:none;
+}
+
+.player_two{
+/* 	border:1px solid black; */
+	background-color:white;
+	position:relative;
+	left:60px;
+    padding:2px;
+	
+
+
+
+
+}
