--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 /*  your css code here. If applicable */
 body{
-	background-color:#cccc;
+background-color:rgb(204, 204, 204);
 }
- h2,h3{
+ h1,h3{
 	 text-align:center;
  }
 li{
