--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,10 @@ background-color:rgb(204, 204, 204);
 	 text-align:center;
  }
 li{
-	width:95%;
+	width:90%;
 	background-color:white;
 	list-style-type:none;
-	padding:2px 1px 2px 4px;
+	padding:1px 1px 2px 4px;
 	text-decoration:none;
 }
 a{
@@ -21,8 +21,12 @@ a{
 	background-color:white;
 	position:relative;
 	left:60px;
-    padding:2px;
+    padding:4px;
+	border:2px solid black;
 }
 .player_one{
 	background-color:rgb(255, 255, 255);
+}
+audio{
+	width:100%;
 }
